<resources>
    <string name="app_name">WalkBuddy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="action_sign_in_short">Register</string>
    <string name="name">Full name</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, please enter a minimum of 6 characters</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_name">Change Name</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send_password_reset_email">Send password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">WalkBuddy</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Register for WalkBuddy.</string>
    <string name="btn_link_to_login">Already registered? Login.</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_save_changes">Save Changes</string>
    <string name="forgot_password_msg">We just need your registered email to send you password reset instructions.</string>
    <string name="delete_account">Delete account</string>
    <string name="destination_name">Destination name</string>
    <string name="starting_location">Starting location</string>
    <string name="btn_find_routes">Find Routes</string>
    <string name="find_routes_message">Pick a destination and get going.</string>
    <string name="route_completed_message">That was a great route! Please specify your starting location and destination name for easy identification if you wish to walk this route again.</string>
    <string name="help_intro">Use this section as a reference for WalkBuddy\'s usage.</string>
    <string name="find_routes_help">This tab is used to record new routes to destinations. It keeps track of your location, timing, and allows you to save the route with a specific destination name and start location.</string>
    <string name="destinations_help">You can find all your past destinations, along with routes to them, here. If you want to walk a route again, just select it from the list and it will bring it up on the map, along with your location relative to it. Long press a destination or route to get the option to delete it.</string>
    <string name="account_help">Edit your account information in the account tab. This includes changing your name, email, and password. You are also able to sign out here or delete your account entirely.</string>
    <string name="about_info">WalkBuddy is an application for maximizing walking by minimizing time. It allows you to record routes to destinations you frequent, then times and stores those routes so that you can walk them again. By doing this, you are able to track the fastest route to every destination.</string>

    <string name="start_route">Start Route</string>
    <string name="route_completed">Route Completed</string>
    <string name="save_route">Save Route</string>
    <string name="cancel_route">Cancel Route</string>
    <string name="pick_a_dest">Pick a destination to record a route for:</string>
    <string name="select_destination">Select Destination</string>
    <string name="quick_route">Quickest routes:</string>
    <string name="no_route_saved">You do not have any routes saved.</string>
    <string name="edit_acc">Edit Account:</string>
    <string name="zeroes">00:00:00</string>
    <string name="route_being_recorded">You route is being recorded.</string>
    <string name="finish_record">Finish Recording</string>
    <string name="add_poi">Add POI</string>
    <string name="cancel_record">Cancel route recording</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
